@@ -4,5 +4,6 @@
     
     <!--Settings-->
     <string id="10001">Video Quality</string>
+    <string id="10002">Favourite Team</string>
     
 </strings>
